small fixes on scroll btn and responsive

--- a/src/app/auth/forget-password/forget-password.component.html
+++ b/src/app/auth/forget-password/forget-password.component.html
@@ -12,7 +12,7 @@
         <form [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
             <mat-form-field appearance="outline" class="full-width register-outline-field">
                 <input matInput placeholder="beispiel@email.com" formControlName="email" type="email" style="
-                color: black !important;">
+                color: black !important;" autocomplete="current-password">
                 <mat-icon matIconPrefix><img src="./assets/img/mail.png"></mat-icon>
                 <mat-error>email eingeben</mat-error>
             </mat-form-field>
