--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -23,7 +23,7 @@
             <mat-form-field appearance="outline" class="full-width register-outline-field">
                 <mat-icon matIconPrefix class="material-icons-outlined">mail</mat-icon>
                 <input matInput placeholder="beispiel@email.com" formControlName="email" type="email" style="
-                color: black !important;">
+                color: black !important;" autocomplete="current-username">
                 <mat-error *ngIf="signUpForm.get('email')?.hasError('required')">Email eingeben</mat-error>
                 <mat-error *ngIf="signUpForm.get('email')?.hasError('email')">Richtige Email eingeben</mat-error>
             </mat-form-field>
@@ -31,7 +31,7 @@
             <mat-form-field appearance="outline" class="full-width register-outline-field">
                 <mat-icon matIconPrefix class="material-icons-outlined">lock</mat-icon>
                 <input matInput placeholder="Password" formControlName="password" type="password" style="
-                color: black !important;">
+                color: black !important;" autocomplete="current-password">
                 <mat-error *ngIf="signUpForm.get('password')?.hasError('required')">Password eingeben</mat-error>
                 <mat-error *ngIf="signUpForm.get('password')?.hasError('minlength')">Mindestens 6 Zeichen eingeben</mat-error>
             </mat-form-field>
