--- a/src/app/dashboard/chat-components/message/message.component.scss
+++ b/src/app/dashboard/chat-components/message/message.component.scss
@@ -71,6 +71,7 @@ app-user-presence {
     height: 60px;
     border-radius: 100%;
     background-color: white;
+    object-fit: cover;
 }
 
 .user-name {
